feat: angular compiler options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "module": "es2020",
     "lib": [
       "es2018",
+      "es2019",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "preserveWhitespaces": true,
+    "strictTemplates": true
   }
 }
