--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "x-shopping-list",
-  "version": "0.0.0",
+  "description": "Simple web app for creating shopping lists and share it",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/planimir77/x-shopping-list"
+  },
+  "license": "MIT",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,36 +21,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.0",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
+    "@angular/animations": "~11.2.6",
+    "@angular/cdk": "^11.2.5",
+    "@angular/common": "~11.2.6",
+    "@angular/compiler": "~11.2.6",
+    "@angular/core": "~11.2.6",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~10.2.0",
-    "@angular/localize": "~10.2.0",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@angular/forms": "~11.2.6",
+    "@angular/localize": "~11.2.6",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "~11.2.6",
+    "@angular/platform-browser-dynamic": "~11.2.6",
+    "@angular/router": "~11.2.6",
     "bootstrap": "^4.5.0",
-    "ng-validate-equal": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.0",
+    "@angular-devkit/build-angular": "~0.1102.5",
+    "@angular/cli": "~11.2.5",
+    "@angular/compiler-cli": "~11.2.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "enhanced-resolve": "^5.7.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -48,7 +58,6 @@
     "protractor": "~7.0.0",
     "schematics-scss-migrate": "^1.3.13",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   }
 }
